--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 * {
     font-family: Arial, Helvetica, sans-serif;
     color: rgb(34, 34, 34);
-    background-color: #181818;
+    background-color: #bbb7b7;
 }
 
 header {
@@ -54,6 +54,17 @@ header {
     margin-bottom: 20px;
 }
 
+#timer {
+    height: auto;
+    text-align: center;
+    min-height: 30px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    font-size: 50px;
+    color: rgb(231, 222, 222);
+    
+}
+
 main {
     display: flex;
     justify-content: center;
@@ -65,7 +76,7 @@ fieldset  {
     display: flex;
     flex-wrap: nowrap;
     flex-direction: row;
-    background-color: DodgerBlue;
+    background-color: #bbb7b7;
 }
 
 input {
